force-app/main/default/objects/Forecast_Salvo__c/Forecast_Salvo__c.object-meta.xml
<CustomObject>
    <label>Forecast Salvo</label>
    <nameField>
        <displayFormat>FS {000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasts Salvos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>