force-app/main/default/objects/Forecast_Salvo__c/fields/Dia__c.field-meta.xml
<CustomField>
    <fullName>Dia__c</fullName>
    <formula>IF(DAY(DATEVALUE(CreatedDate)) &lt; 15, &apos;Dia 3&apos;, &apos;Último dia&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dia</label>
    <type>Text</type>
</CustomField>