force-app/main/default/objects/Forecast_Salvo__c/fields/Linha__c.field-meta.xml
<CustomField>
    <fullName>Linha__c</fullName>
    <label>Linha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>