force-app/main/default/objects/Forecast_Salvo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Linha__c</columns>
    <columns>Regiao__c</columns>
    <columns>Valor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <language>pt_BR</language>
</ListView>